fix social links spacing for safari

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -143,8 +143,6 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  row-gap: 2rem;
-  column-gap: 4rem;
   opacity: 0;
   animation: fade-up 0.5s 0.2s ease-out forwards;
 }
@@ -152,6 +150,7 @@
 .social__icon {
   fill: var(--white100);
   width: 2.4rem;
+  margin-right: 4rem;
   transition: fill 0.2s ease-out;
 
   &:hover {
@@ -175,6 +174,10 @@
   font-weight: 500;
   letter-spacing: 1px;
   animation: fade-up 0.5s 0.6s ease-out forwards;
+
+  .social__icon {
+    margin: 0;
+  }
 
   &:hover {
     .social__icon {
